eks_templates/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: appspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: 920013188018.dkr.ecr.us-west-1.amazonaws.com/dashboard
        ports:
        - containerPort: 80
