eks_templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: appspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 920013188018.dkr.ecr.us-west-1.amazonaws.com/frontend
        ports:
        - containerPort: 80
