eks_templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: appspace
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: appspace
spec:
  selector:
    app: dashboard
  ports:
  - port: 80
    targetPort: 80
